# L3-Agentic-Training

./: .gitignore  base-requirements.txt  main.py  pyproject.toml  readme.txt
.kiro/steering/: product.md  structure.md  tech.md
L3June26_AP/: pyproject.toml  pyt1.py  pyt2.py  pyt3.py  pyt4.py  pyt5.py  requirements.txt
L3June26_AP/agents/: calc_agent.py  stock_agent.py  tavily_search_agent.py  weather_agent.py  web_search_agent.py
L3June26_AP/tools/: agent_tools.py  calculator.py  stock.py  tavily_search.py  weather.py  web_search.py
